--- a/src/rag_pipeline_demo.ipynb
+++ b/src/rag_pipeline_demo.ipynb
@@ -83,7 +83,7 @@
    "source": [
     "# Generate Response\n",
     "# Generate a response based on the retrieved chunks\n",
-    "response = generate_response(chunks)\n",
+    "response = generate_response(chunks,query)\n",
     "print(response)"
    ]
   }
