--- a/rag_pipeline_demo.ipynb
+++ b/rag_pipeline_demo.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "# Extract Text from PDF\n",
     "# Specify the PDF file\n",
-    "pdf_path = '../data/sample.pdf'"
+    "pdf_path = 'data/sample.pdf'"
    ]
   },
   {
